# VPNInYourBrowser

./: README.md  config.json  main.py  pyproject.toml
templates/: 404Error.html  index.html  links.html  main.html  wrongRegion.html
