[tool.poetry]
name = "repl_python3_BrowserVPN"
version = "0.1.0"
description = ""
authors = ["Jaffa42 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
gevent = "^21.12.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
